Finishing touches + fix seed overlap

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
     border-radius: 0.5em;
     max-width: 50em;
     background-color: #353535;
-    padding: 5em 1em 5em 1em;
+    padding: 5em 1em 3em 1em;
     color: #fff;
     min-height: 12em;
 }
@@ -46,6 +46,7 @@ body {
     background-color: #353535;
     padding: 2em 1em 2em 1em;
     color: #fff;
+    overflow-x: auto;
 }
 
 .savedBlock h2 {
